[project]
name = "waybackurls"
version = "2.0.0"
description = "Retrieve URLs from the Wayback Machine for one or more hosts."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Leif R Bruce", email = "00xNetrunner@users.noreply.github.com" }]
keywords = ["wayback", "osint", "recon", "urls", "archive", "bugbounty"]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/00xNetrunner/waybackurls.py"

[project.scripts]
waybackurls = "waybackurls:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["waybackurls.py"]
